将页面跳转请求放在单独的jump servlet中处理
增加了log4j日志包。默认级别为debug

--- a/src/main/webapp/css/logo.css
+++ b/src/main/webapp/css/logo.css
@@ -1,20 +1,26 @@
 .logo-s{
 	width: 20px;
+	padding: 2px;
 }
 .logo-m{
 	width: 50px;
+	padding: 5px;
 }
 .logo-l{
 	width:100px;
+	padding: 10px;
 }
 .qr-s{
 	width: 100px;
+	padding: 5px;
 }
 .qr-m{
 	width: 200px;
+	padding: 5px;
 }
 .qr-l{
 	width: 300px;
+	padding: 5px;
 }
 a{
 	text-decoration: none;
